# rkdb

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.circleci/: config.yml
demos/embed/: Cargo.toml  README.md  embed.q
demos/embed/.cargo/: config
demos/embed/src/: lib.rs
demos/ipc/: Cargo.toml  README.md
demos/ipc/src/: main.rs
src/: api.rs  k.rs  kapi.rs  kbindings.rs  lib.rs  types.rs
